fixed alignment with button

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,6 +43,7 @@
    margin-left: auto;
    display: block;
    text-align: center;
+   padding-top: 50px;
 }
 .online-menu-btn{
     font-family: 'Karla-Bold';
